distros/P/Plack-Middleware-Zitadel/examples/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-auth-proxy
  namespace: zitadel
spec:
  selector:
    app: zitadel-auth-proxy
  ports:
    - name: http
      port: 80
      targetPort: 5000
